--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
-Flask==2.1.3
-Flask-JWT-Extended==4.4.4
-SQLAlchemy==1.4.37
-cryptography==39.0.1
+Flask==3.0.3
+Flask-JWT-Extended==4.6.0
+Flask-Migrate==4.0.7
+Flask-SQLAlchemy==3.1.1
+Mako==1.3.5
+cryptography==42.0.8
+pycparser==2.22
 pycryptodome==3.20.0
-gunicorn==22.0.0
+PyJWT==2.8.0
+requests==2.32.3
+SQLAlchemy==2.0.31
+urllib3==2.2.1
+Werkzeug==3.0.3
